--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^5.3.0",
     "nuxt": "3.0.0-rc.5"
   },
   "dependencies": {
